// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Portal doesn't render 1`] = `
<Portal
  containerInfo={
    <body
      class=""
    >
      <div>
        <button>
          TEST
        </button>
      </div>
      <div
        class="security--portal__overlay"
        tabindex="-1"
      />
      <div
        class="security--portal__overlay"
        tabindex="-1"
      />
    </body>
  }
>
  <FocusTrap
    _createFocusTrap={[Function]}
    active={true}
    focusTrapOptions={
      Object {
        "initialFocus": null,
      }
    }
    paused={false}
  >
    <div>
      <button>
        TEST
      </button>
    </div>
  </FocusTrap>
</Portal>
`;

exports[`Portal renders correctly 1`] = `
<Portal
  className="class"
  focusTrap={true}
  hasOverlay={true}
  initialFocus={null}
  rootNode={
    <body
      class="security--portal__container"
    >
      <div>
        <button>
          TEST
        </button>
      </div>
      <div
        class="security--portal__overlay"
        tabindex="-1"
      />
    </body>
  }
  stopPropagation={false}
  title="Label"
>
  <Portal
    containerInfo={
      <body
        class="security--portal__container"
      >
        <div>
          <button>
            TEST
          </button>
        </div>
        <div
          class="security--portal__overlay"
          tabindex="-1"
        />
      </body>
    }
  >
    <FocusTrap
      _createFocusTrap={[Function]}
      active={true}
      focusTrapOptions={
        Object {
          "initialFocus": null,
        }
      }
      paused={false}
    >
      <div>
        <button>
          TEST
        </button>
      </div>
    </FocusTrap>
  </Portal>
</Portal>
`;
